--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development --open --config webpack/config.dev.js"
+    "start": "NODE_ENV=development webpack-dev-server --mode development --open --config webpack/config.dev.js",
+    "build": "NODE_ENV=production webpack --mode production --config webpack/config.prod.js"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,10 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "mini-css-extract-plugin": "^0.5.0"
   },
   "dependencies": {
     "react": "^16.8.3",
