--- a/package.json
+++ b/package.json
@@ -26,15 +26,17 @@
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
+    "eslint": "^5.15.1",
+    "eslint-loader": "^2.1.2",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
-    "webpack-merge": "^4.2.1",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "mini-css-extract-plugin": "^0.5.0"
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "react": "^16.8.3",
