--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0"
   }
